[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FIsheyeTutorial"
version = "0.1.0"
description = "Utilities for the River Herring workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["opencv-python", "ultralytics", "supervision"]

[tool.setuptools.packages.find]
where = ["src"]
